new database setups

--- a/templates/base.html
+++ b/templates/base.html
@@ -199,7 +199,7 @@
 
       <div class="fixed-bottom mx-auto" style="bottom: 0%">
         <div class="credits">
-          Designed by <a target="_blank" href="https://linkedin.com/in/jetezra/">JET DEV</a>
+          Copyright &copy; {% now "M Y" %}
         </div>
       </div>
   </footer>
