--- a/templates/base.html
+++ b/templates/base.html
@@ -56,65 +56,28 @@
       <div class="toggle-nav">
         <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i class="icon_menu"></i></div>
       </div>
-
       <!--logo start-->
-      <a href="index.html" class="logo">Light<span class="lite">Us <i class="text-warning fa fa-lightbulb-o"></i></span></a>
+      <a href="{% url 'payment:home' %}" class="logo">Light<span class="lite">Us <i class="text-warning fa fa-lightbulb-o"></i></span></a>
       <!--logo end-->
 
       <div class="top-nav notification-row">
         <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
           <!-- alert notification start-->
-          <li id="alert_notificatoin_bar" class="dropdown">
-            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-
-                            <i class="icon-bell-l"></i>
-                            <span class="badge bg-important">7</span>
-                        </a>
-            <ul class="dropdown-menu extended notification">
-              <div class="notify-arrow notify-arrow-blue"></div>
-              <li>
-                <p class="blue">You have 4 new notifications</p>
-              </li>
-              <li>
-                <a href="#">
-                                    <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Friend Request
-                                    <span class="small italic pull-right">5 mins</span>
-                                </a>
-              </li>
-              <li>
-                <a href="#">
-                                    <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    John location.
-                                    <span class="small italic pull-right">50 mins</span>
-                                </a>
-              </li>
-              <li>
-                <a href="#">
-                                    <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    Project 3 Completed.
-                                    <span class="small italic pull-right">1 hr</span>
-                                </a>
-              </li>
-              <li>
-                <a href="#">
-                                    <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
-                                    <span class="small italic pull-right"> Today</span>
-                                </a>
-              </li>
-              <li>
-                <a href="#">See all notifications</a>
-              </li>
-            </ul>
+          <li id="alert_notificatoin_bar" title="History">
+            <a href="{% url 'payment:history' %}">
+                <i class="fa fa-history"></i>
+{#                <span class="badge bg-important">7</span>#}
+            </a>
           </li>
           <!-- alert notification end-->
           <!-- user login dropdown start-->
           <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="{{ user.profile.dp }}">
+                                {% if user.profile.dp %}
+                                    <img alt="" style="max-height: 35px; max-width: 50px;" class="avatar" src="{{ user.profile.dp.url }}">
+                                {% endif %} 
                             </span>
                             <span class="username">{{ user.get_full_name }}</span>
                             <b class="caret"></b>
@@ -154,7 +117,7 @@
                       </a>
           </li>
             <li class="active">
-            <a class="" href="index.html">
+            <a class="" href="{% url 'payment:history' %}">
                           <i class="fa fa-history"></i>
                           <span>History</span>
                       </a>
@@ -214,6 +177,7 @@
 
 
 <!-- javascripts -->
+  <script src="https://checkout.flutterwave.com/v3.js"></script>
   <script src="{% static 'js/jquery.js' %}"></script>
   <script src="{% static 'js/jquery-ui-1.10.4.min.js' %}"></script>
   <script src="{% static 'js/jquery-1.8.3.min.js' %}"></script>
