--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -67,7 +67,9 @@
                 }
             })
         })
-
     </script>
+{% block homescripts %}
+
+{% endblock homescripts %}
 
 {% endblock %}
