--- a/templates/pages/single_community.html
+++ b/templates/pages/single_community.html
@@ -60,18 +60,25 @@
                                 <div class="activity-body act-in">
                                     <span class="arrow"></span>
                                     <div class="text">
-                                        <a href="#" class="activity-img">
-                                        	<img class="avatar" {% if us.profile.dp %} src="{{us.profile.dp.url}}" {% else %} src="{% static 'img/profile_holder.png' %}" {% endif %} alt=""></a>
-                                        {% if request.user.email and request.user.profile.account_number %}
-                                            <button style="float:right;" class="btn-sm btn">Buy units</button>
+                                        <a href="#"  class="activity-img">
+                                        	<img class="avatar" data-userid="{{ us.pk }}" id="user_{{ us.pk }}" data-email="{{ user.email }}" data-phone="{{  user.profile.account_number }}" data-name="{{ user.get_full_name }}"  {% if us.profile.dp %} src="{{us.profile.dp.url}}" {% else %} src="{% static 'img/profile_holder.png' %}" {% endif %} alt=""></a>
+                                        {% if request.user.email and request.user != us and request.user.profile.account_number and us.profile.account_number %}
+                                            <button style="float:right;" onClick="makePayment({{ us.pk }})" class="btn-sm btn">Buy units</button>
+                                        {% elif request.user == us %}
+                                            <button style="float:right;" type="button" class="btn btn-muted">This is you</button>
+                                        {% elif not us.profile.account_number %}
+                                            <button style="float:right;" type="button" class="btn btn-muted">Blocked payments</button>
                                             {% else %}
-                                            <a style="float:right;" class="btn-sm btn">Finish profile first</a>
+                                            <a style="float:right;" href="{% url 'payment:profile' %}" class="btn-sm btn">Finish profile first</a>
                                         {% endif %}
                                         <p class="attribution text-info"><a>{{us.get_full_name}}</a> Total units: {{us.profile.units}}</p>
                                         <p class="text-info">
                                         	<strong>From: {% if us.profile.address %} {{us.profile.address}} {% else %} Unknown address.{% endif %}</strong><br>
 {#                                        	<input type="number" id="units" step="0.1" max="{{us.profile.units}}" min="0.1" value="{{us.profile.units}}" name="">#}
-                                            <button type="button" class="btn" onclick="decrease()" id="decrease">-</button> <span data-id="{{ us.profile.units }}" id="units">{{ us.profile.units }}</span>  <button onclick="increase()" class="btn" id="increase" type="button">+</button> <span class="float-right text-danger" id="price"></span>
+                                            <button type="button" class="btn" onclick="decrease({{ us.pk }})" id="decrease">-</button> <span data-id="{{ us.profile.units }}" id="units_{{ us.pk }}">{{ us.profile.units }}</span>  <button onclick="increase({{ us.pk }})" class="btn" id="increase" type="button">+</button> <span class="float-right text-danger" id="price_{{ us.pk }}">{{ us.profile.default_total }}</span>
+                                        <form id="myhiddenform" action="{% url 'payment:pay' %}" method="post">
+                                            {% csrf_token %}
+                                        </form>
                                         </p>
 
                                     </div>
@@ -86,10 +93,8 @@
                             <div class="bio-graph-heading">
                                 {{community.about|safe}}
                             </div>
-                            
                         </section>
                     </div>
-                    
                 </div>
             </div>
         </section>
@@ -97,54 +102,115 @@
 </div>
 {% endblock home %}
 
- {% block scripts %}
+ {% block homescripts %}
      <script>
-     {#$("#increase").click(function (){#}
-     {#    increase()#}
-     {#})#}
-     {##}
-     {#$("#descrease").click(function (){#}
-     {#    decrease()#}
-     {#})#}
-
-    function increase(){
-
-        var total_units = Number($("#units").data("id"))
-        var units_now = Number($("#units").text())
-        {#alert(units_now)#}
+    function increase(id){
+        var total_units = Number($("#units_"+id).data("id"))
+        var units_now = Number($("#units_"+id).text())
         if (units_now >= total_units){
-            $("#units").text(String(units_now.toFixed(1)))
+            $("#units_"+id).text(String(units_now.toFixed(1)))
         }else{
-            $("#units").text(String((units_now+0.1).toFixed(1)))
+            $("#units_"+id).text(String((units_now+0.1).toFixed(1)))
         }
-
-         price()
+         price(id)
     }
 
-    function price(){
-        var units_now = Number($("#units").text())
+    function price(id){
+        var units_now = Number($("#units_"+id).text())
         var new_price = units_now * 550
-        $("#price").text("UGX. "+String(new_price))
+        $("#price_"+id).text("UGX. "+String(new_price))
     }
 
-    $(window).load(function (){
-        price()
-    })
-
-
-
-    function decrease(){
-        {#var total_units = $("#units").data("id")#}
-        {#var total_units = Number($("#units").data("id"))#}
-        var units_now = Number($("#units").text())
+    function decrease(id){
+        var units_now = Number($("#units_"+id).text())
         if (units_now <= 0.1){
-            $("#units").text("0.1")
+            $("#units_"+id).text("0.1")
         }else{
-            $("#units").text(String((units_now-0.1).toFixed(1)))
+            $("#units_"+id).text(String((units_now-0.1).toFixed(1)))
         }
+         price(id)
+    }
 
-         price()
+    function txGenerator() {
+        var time_now = new Date().getTime()
+        return "Awesome-"+time_now
+    }
+
+
+    function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+    function makePayment(id) {
+        var units_now = Number($("#units_"+id).text())
+        var new_price = units_now * 550
+        FlutterwaveCheckout({
+                public_key: "FLWPUBK_TEST-b478401e9a57b88d6b8243639e3ca9d7-X",
+                tx_ref: txGenerator(),
+                amount: new_price,
+                currency: "UGX",
+                country: "UG",
+                payment_options: "mobilemoneyuganda",
+                customer: {
+                    email: $('#user_'+id).data('email'),
+                    phone_number: $('#user_'+id).data('phone'),
+                    name: $('#user_'+id).data('name'),
+                },
+                callback: function (data) {
+                    console.log(data);
+                    var seller_id = $('#user_'+id).data('userid')
+                    var body = {
+                        "status":data.status,
+                        "seller_id":seller_id,
+                        "transaction_id": data.transaction_id,
+                        "tx_ref":data.tx_ref,
+                        "flw_ref": data.flw_ref,
+                        "amount" : data.amount,
+                        "units": units_now
+                    }
+                    $.ajax({
+                        url:$("#myhiddenform").attr("action"),
+                        data: body,
+                        dataType: 'json',
+                        type:'POST',
+                        headers: {
+                            "X-CSRFToken": getCookie("csrftoken")
+                        },
+                        success:function (res) {
+                            if (res.status){
+                                $.ajax({
+                                    url: "https://api.flutterwave.com/v3/transfers",
+                                    headers: {
+                                        'Content-Type': 'application/json',
+                                        "Authorization" : "Bearer FLWSECK_TEST-06e17cc7ae4c99be6b3b247ecd217f77-X"
+                                    },
+                                    data: res.data,
+                                })
+                            }else{
+                                alert("Error: There was a technical error")
+                            }
+                        }
+                    })
+                },
+                customizations: {
+                    title: "Electricity purchase",
+                    description: "Purchase of "+units_now+" by "+$('#user_'+id).data('name'),
+                    logo: "https://www.thoughtco.com/thmb/NjWNoDg8rEZ4KVQMUq3xwp3G6tU=/735x0/lightbulblit-57a5bf6b5f9b58974aee831e.jpg",
+                },
+            });
     }
 
      </script>
- {% endblock %}
+ {% endblock homescripts %}
